[package]
name = "concordium-rosetta"
version = "0.5.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.concordium-rust-sdk]
path = "./concordium-rust-sdk"
version = "*"

[dependencies.rosetta]
path = "./rosetta"
version = "*"

[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive", "env"] }
env_logger = "0.9"
futures = "0.3"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
tonic = "0.5"
warp = "0.3"
