[package]
name = "query-account"
version = "0.1.0"
edition = "2018"

[dependencies.rosetta]
path = "../../rosetta"
version = "*"

[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive"] }
clap_derive = "=3.1" # fix dependency of 'clap' to last 2018-edition version
clap_lex = "=0.2.0" # fix dependency of 'clap' to last 2018-edition version
reqwest = { version = "0.11", features = ["blocking", "json"] }
