[package]
name = "transfer-client-direct"
version = "0.1.0"
edition = "2018"

[dependencies.concordium-rust-sdk]
path = "../../concordium-rust-sdk"
version = "*"

[dependencies]
anyhow = "1"
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
hex = "0.4"
serde_cbor = "0.11.2"
serde_json = "1.0"
tokio = "1.8"
tonic = "0.5"
