[package]
name = "transfer-client-direct"
version = "0.2.0"
edition = "2018"

[dependencies.concordium-rust-sdk]
path = "../../concordium-rust-sdk"
version = "*"

[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive"] }
clap_derive = "=3.1" # fix dependency of 'clap' to last 2018-edition version
clap_lex = "=0.2.0" # fix dependency of 'clap' to last 2018-edition version
chrono = "0.4"
hex = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
tonic = "0.5"
serde_json = "1.0"
