[package]
name = "transfer-client-direct"
version = "0.2.2"
edition = "2018"

[dependencies.concordium-rust-sdk]
path = "../../concordium-rust-sdk"


[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive"] }
chrono = "0.4"
hex = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread"] }
tonic = "0.5"
serde_cbor = "0.11.2"
serde_json = "1.0"
