[package]
name = "transfer-client"
version = "0.2.1"
edition = "2018"

[dependencies.concordium-rust-sdk]
path = "../../concordium-rust-sdk"
version = "*"

[dependencies.rosetta]
path = "../../rosetta"
version = "*"

[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive"] }
chrono = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
