[package]
name = "transfer-client"
version = "0.2.2"
edition = "2024"

[dependencies.concordium-rust-sdk]
path = "../../concordium-rust-sdk"

[dependencies.rosetta]
path = "../../rosetta"

[dependencies]
anyhow = "1"
clap = { version = "=3.1", features = ["derive"] }
chrono = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0"
